[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/Enemigos/Nivel3/Arana_jefe.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoStart.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack1Idle.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack1.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack2Setup.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack2.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack3Setup.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack3.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossControl.gd" type="Script" id=10]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoTargetJugador.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/Enemigos/Proyectiles/Nivel3BossHuevo.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Nivel3Boss/Nivel3BossEstadoAttack1Setup.gd" type="Script" id=13]
[ext_resource path="res://Objects/Enemigos/Nivel3BossMuerto.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.3917, 35.5165 )

[sub_resource type="Animation" id=3]
resource_name = "anim_nivel_3_jefe_attack_1"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "anim_nivel_3_jefe_attack_1_setup"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Attack1Setup")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Attack1Movement" ],
"method": "exit"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "anim_nivel_3_jefe_attack_2"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 26 ]
}

[sub_resource type="Animation" id=6]
resource_name = "anim_nivel_3_jefe_attack_2_setup"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Attack2Setup")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Attack2" ],
"method": "exit"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "anim_nivel_3_jefe_attack_3"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=2]
resource_name = "anim_nivel_3_jefe_start"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[node name="Nivel3Boss" type="Area2D"]
script = ExtResource( 10 )
cuerpo = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 6
hframes = 5
frame = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Start" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Attack1Setup" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Attack1Movement" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
proyectil = ExtResource( 11 )

[node name="Attack1Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
proyectil = ExtResource( 11 )

[node name="Attack2Setup" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attack2" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attack3Setup" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Attack3" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
huevo = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_nivel_3_jefe_attack_1 = SubResource( 3 )
anims/anim_nivel_3_jefe_attack_1_setup = SubResource( 4 )
anims/anim_nivel_3_jefe_attack_2 = SubResource( 5 )
anims/anim_nivel_3_jefe_attack_2_setup = SubResource( 6 )
anims/anim_nivel_3_jefe_attack_3 = SubResource( 7 )
anims/anim_nivel_3_jefe_start = SubResource( 2 )
